--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -3,8 +3,8 @@
 
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static 'post.css' %}">
-    <link rel="stylesheet" href="{% static 'index.css' %}">
+    <link rel="stylesheet" href="{% static 'blog/post.css' %}">
+    <link rel="stylesheet" href="{% static 'blog/index.css' %}">
 {% endblock %}
 
 {% block title %}
@@ -16,7 +16,7 @@
         <header>
             <img src="{% static 'blog/images/girl.jpg' %}" alt="Homa - The Author Of This Blog">
             <h2>Homa's Blog</h2>
-            <p>Hi, I'm Homa and I love to blog about fashion, lifestyle and beauty!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </header>
     </section>
 
@@ -32,11 +32,13 @@
 
     <section id="about">
         <h2>What I do</h2>
-        <p>I am a YouTuber and content creator and also a model and also an investor. I produce Music Videos and contents for the top brands.
-            I love dancing, cooking, playing piano, sky diving and... .
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Nostrum, libero ratione doloremque tempore doloribus corporis neque fugit alias inventore quas quo accusamus odit dicta expedita, 
+            sint nisi, maiores hic eius!
         </p>
-        <p>My goal is to help and inspire people, especially woman, to persue their dreams and make them come true. I want
-            to be an example of someone who is doing what she loves.
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Ipsam veritatis soluta nemo quasi at reiciendis ducimus consequuntur magni asperiores tenetur cumque rerum, repellat laboriosam animi velit. 
+            Cupiditate a sunt quos.
         </p>
     </section>
 {% endblock %}
